@@ -65,6 +65,7 @@
 
  Other changes:
 
+   - ofaApplication: move initialization from instanciation to startup (todo #1272).
    - ofaExerciceTreeview: new class.
    - ofaIDBMeta interface is renamed to ofaIDBDossierMeta (todo #1274).
    - ofaIDBPeriod interface is renamed to ofaIDBExerciceMeta (todo #1275).
